--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,10 @@
 
     <div class="page-content">
       <div class="wrapper">
+        testing1: {{ site.url }}
+        <br>
+        testing2: {{ site.urlx }}
+        <br>
         {{ content }}
       </div>
     </div>
